[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trojan = {path = "../trojan"}
errors = {path = "../errors"}
async-std = "1.9.0"
env_logger = "0.8"
rustls = "0.19.1"
async-tls = {path = "../async-tls"}
tide = "0.16.0"

[[bin]]
name = "trojan"
path = "src/main.rs"