[package]
name = "errors"
version = "0.1.0"
authors = ["git <snow2flying@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
anyhow = "1.0.38"
glommio = "0.4.1"
tonic = { version = "0.4" }
trust-dns-resolver = { version = "0.20"  }
hyper = { version = "0.13.9", default-features = false }
log = "0.4.14"
sqlx = { version = "0.5" }
async-std = "1.9.0"

[features]
default= ["sqlite"]
sqlite = ["sqlx/sqlite","sqlx/runtime-async-std-rustls"]